--- a/budget/package.json
+++ b/budget/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
+    "@faker-js/faker": "^7.6.0",
     "@mantine/core": "^5.10.4",
     "@mantine/hooks": "^5.10.4",
     "@mantine/next": "^5.10.4",
     "@next/font": "13.1.6",
-    "@tabler/icons-react": "^2.4.0",
+    "chart.js": "^4.2.1",
+    "faker": "^6.6.6",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
