--- a/budget/package.json
+++ b/budget/package.json
@@ -22,7 +22,9 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-qr-reader": "^3.0.0-beta-1",
+    "react-web-qr-reader": "^1.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
