--- a/budget/package.json
+++ b/budget/package.json
@@ -18,12 +18,15 @@
     "@next/font": "13.1.6",
     "chart.js": "^4.2.1",
     "faker": "^6.6.6",
+    "firebase": "^9.17.1",
     "next": "13.1.6",
+    "openai": "^3.1.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-qr-reader": "^3.0.0-beta-1",
+    "react-uuid": "^2.0.0",
     "react-web-qr-reader": "^1.0.4"
   },
   "devDependencies": {
